--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
   "expo": {
-    "name": "APEP",
-    "slug": "APEP",
+    "name": "APEP-Native",
+    "slug": "apep-native",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./app/assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./app/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -21,6 +21,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": ""
   }
 }
