--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@react-native-community/hooks": "^2.6.0",
+    "@react-navigation/drawer": "^5.11.4",
     "expo": "~39.0.2",
     "expo-constants": "^9.2.0",
+    "expo-image-picker": "~9.1.0",
+    "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "formik": "^2.2.6",
     "react": "16.13.1",
@@ -19,8 +22,10 @@
     "react-native-gesture-handler": "~1.7.0",
     "react-native-web": "~0.13.12",
     "yup": "^0.32.8",
-    "expo-image-picker": "~9.1.0",
-    "expo-permissions": "~9.3.0"
+    "react-native-reanimated": "~1.13.0",
+    "react-native-screens": "~2.10.1",
+    "react-native-safe-area-context": "3.1.4",
+    "@react-native-community/masked-view": "0.1.10"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
